工具外部请求优化

--- a/apps/tool/templates/tool/docker_search.html
+++ b/apps/tool/templates/tool/docker_search.html
@@ -41,8 +41,8 @@
 {% block end_f %}
     <script>
         $('#start-push').click(function () {
-            {#docker_search("{{ csrf_token }}", "{% url 'tool:docker_search' %}");#}
-            docker_search_from_hub();
+            docker_search("{{ csrf_token }}", "{% url 'tool:docker_search' %}");
+            {#docker_search_from_hub();#}
         })
 
     </script>
