--- a/apps/tool/templates/tool/query_ip.html
+++ b/apps/tool/templates/tool/query_ip.html
@@ -6,6 +6,14 @@
     <meta name="description" content="IP地址查询是一个在线工具，访问本页面可以获取我当前的IP地址和本机IP，输入IP还可以查询对应的归属地信息，地理位置信息可以精确到运营商和国家、省市级别。">
     <meta name="keywords" content="IP地址查询,本机IP,我的IP,IP查询详细信息,在线工具">
 {% endblock %}
+{% block top-file %}
+    <style>
+        #result p {
+            margin-top: .3em;
+            margin-bottom: .3em;
+        }
+    </style>
+{% endblock %}
 
 {% block tool_name %}IP地址查询工具{% endblock %}
 {% block left_content %}
