文章导航页面添加标题导航自动active效果

--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -74,7 +74,7 @@
 .article-toc {
     position: fixed;
     max-width: 18%;
-    border-left: 1px solid #10b981;
+    border-left: .1rem solid #d1d7dd;
 }
 
 .article-toc .toc-title {
@@ -96,10 +96,25 @@
     color: rgb(0, 153, 255);
 }
 
+.toc a.active {
+    color: #10b981;
+}
 .toc a:hover {
-    color: #ff6900 !important;
+    color: #10b981;
 }
 
+.toc a::before {
+    content: "";
+    position: absolute; /* 设置绝对定位 */
+    left: -.1rem; /* 用于调整伪元素与链接文本之间的间距 */
+    width: .1rem; /* 伪元素宽度 */
+    height: 1rem; /* 伪元素高度与 <a> 标签保持一致 */
+    background-color: var(--color-border-default);
+}
+
+.toc a.active::before {
+    background-color: #10b981;
+}
 
 blockquote {
     margin: 0 0 .5em;
