文章导航页面添加标题导航自动active效果

--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -40,7 +40,7 @@
             {% endif %}
 
             <!-- 个人外链 -->
-            <li class="nav-item dropdown mr-2">
+            <li class="nav-item dropdown mr-2 d-none d-lg-block">
                 <a class="nav-link dropdown-toggle py-md-3" href="#" id="more-link" role="button"
                    data-toggle="dropdown"
                    aria-haspopup="true"
