--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -21,7 +21,7 @@
 {% block base_content %}
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-9 col-xl-10">
+            <div class="col-lg-9">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-white border-0 rounded-6 mb-2 py-2 f-15">
                         <li class="breadcrumb-item">
