--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="{% static 'blog/js/headroom.min.js'%}"></script>
     <!-- blog CSS -->
-    <link href="{% static 'blog/css/base.css' %}?v=20230610.2" rel="stylesheet">
+    <link href="{% static 'blog/css/base.css' %}?v=20230611.1" rel="stylesheet">
     {% block top-file %}{% endblock %}
     <!--根据cookies判断是否启用暗色主题-->
     {% if not request.COOKIES.toggleTheme %}
@@ -56,7 +56,7 @@
 {% endif %}
 
 <!--回到顶部按钮-->
-<div class="text-center" id="to-top" title="回到顶部"></div>
+<div class="text-center" id="to-top" title="回到顶部"><i class="fa fa-arrow-up"></i></div>
 
 <!--主要内容块-->
 <main>{% block base_content %}{% endblock %}</main>
@@ -70,7 +70,7 @@
 <script>
 $(function(){var myElement=document.querySelector(".blog-navbar");var headroom=new Headroom(myElement);headroom.init()});
 </script>
-<script src="{% static 'blog/js/base.js'%}?v=20230605.14"></script>
+<script src="{% static 'blog/js/base.js'%}?v=20230611.7"></script>
 {% if user.is_authenticated %}
 <script>
 var msgs = {% get_notifications_count user 'false' %};
