--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -75,6 +75,8 @@
     position: fixed;
     max-width: 18%;
     border-left: .1rem solid #d1d7dd;
+    max-height: 33rem;
+    overflow: auto;
 }
 
 .article-toc .toc-title {
