优化代码块样式

--- a/apps/blog/static/blog/css/monokai.css
+++ b/apps/blog/static/blog/css/monokai.css
@@ -4,7 +4,7 @@
     color: #d4d7da;
 }
 
-.codehilite  { background: #2b2b2b; color: #f8f8f2; border-radius: 8px;}
+.codehilite  { background: #292b30; color: #f8f8f2; border-radius: 8px;}
 .codehilite .hll { background-color: #49483e }
 .codehilite .c { color: #75715e } /* Comment */
 .codehilite .err { color: #960050; background-color: #1e0010 } /* Error */
