--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -137,10 +137,10 @@ pre {
 /*复制代码*/
 .code-wrapper {
     border-radius: 8px 8px 0 0;
-    background-color: #3c3f41;
+    background-color: #292b30;
     display: flex;
     justify-content: space-between;
-    height: 1.6rem;
+    height: 1.8rem;
 }
 
 .code-wrapper:before {
