--- a/apps/blog/static/blog/css/monokai.css
+++ b/apps/blog/static/blog/css/monokai.css
@@ -1,76 +1,76 @@
 .codehilite pre {
     font-size: 85%;
     padding: .5rem;
-    color: #d4d7da;
+    color: #A6ACCD;
 }
 
-.codehilite  { background: #292b30; color: #f8f8f2; border-radius: 8px;}
+.codehilite  { background: #292b30; color: #A6ACCD; border-radius: 8px;}
 .codehilite .hll { background-color: #49483e }
-.codehilite .c { color: #75715e } /* Comment */
+.codehilite .c { color: #676E95 } /* Comment */
 .codehilite .err { color: #960050; background-color: #1e0010 } /* Error */
-.codehilite .k { color: #66d9ef } /* Keyword */
+.codehilite .k { color: #89DDFF } /* Keyword */
 .codehilite .l { color: #ae81ff } /* Literal */
-.codehilite .n { color: #f8f8f2 } /* Name */
+.codehilite .n { color: #A6ACCD } /* Name */
 .codehilite .o { color: #f92672 } /* Operator */
-.codehilite .p { color: #f8f8f2 } /* Punctuation */
-.codehilite .ch { color: #75715e } /* Comment.Hashbang */
-.codehilite .cm { color: #75715e } /* Comment.Multiline */
-.codehilite .cp { color: #75715e } /* Comment.Preproc */
-.codehilite .cpf { color: #75715e } /* Comment.PreprocFile */
-.codehilite .c1 { color: #75715e } /* Comment.Single */
-.codehilite .cs { color: #75715e } /* Comment.Special */
+.codehilite .p { color: #A6ACCD } /* Punctuation */
+.codehilite .ch { color: #676E95 } /* Comment.Hashbang */
+.codehilite .cm { color: #676E95 } /* Comment.Multiline */
+.codehilite .cp { color: #676E95 } /* Comment.Preproc */
+.codehilite .cpf { color: #676E95 } /* Comment.PreprocFile */
+.codehilite .c1 { color: #676E95 } /* Comment.Single */
+.codehilite .cs { color: #676E95 } /* Comment.Special */
 .codehilite .gd { color: #f92672 } /* Generic.Deleted */
 .codehilite .ge { font-style: italic } /* Generic.Emph */
 .codehilite .gi { color: #a6e22e } /* Generic.Inserted */
 .codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #75715e } /* Generic.Subheading */
-.codehilite .kc { color: #66d9ef } /* Keyword.Constant */
-.codehilite .kd { color: #66d9ef } /* Keyword.Declaration */
+.codehilite .gu { color: #676E95 } /* Generic.Subheading */
+.codehilite .kc { color: #89DDFF } /* Keyword.Constant */
+.codehilite .kd { color: #89DDFF } /* Keyword.Declaration */
 .codehilite .kn { color: #f92672 } /* Keyword.Namespace */
-.codehilite .kp { color: #66d9ef } /* Keyword.Pseudo */
-.codehilite .kr { color: #66d9ef } /* Keyword.Reserved */
-.codehilite .kt { color: #66d9ef } /* Keyword.Type */
-.codehilite .ld { color: #e6db74 } /* Literal.Date */
+.codehilite .kp { color: #89DDFF } /* Keyword.Pseudo */
+.codehilite .kr { color: #89DDFF } /* Keyword.Reserved */
+.codehilite .kt { color: #89DDFF } /* Keyword.Type */
+.codehilite .ld { color: #C3E88D } /* Literal.Date */
 .codehilite .m { color: #ae81ff } /* Literal.Number */
-.codehilite .s { color: #e6db74 } /* Literal.String */
+.codehilite .s { color: #C3E88D } /* Literal.String */
 .codehilite .na { color: #a6e22e } /* Name.Attribute */
-.codehilite .nb { color: #f8f8f2 } /* Name.Builtin */
+.codehilite .nb { color: #A6ACCD } /* Name.Builtin */
 .codehilite .nc { color: #a6e22e } /* Name.Class */
-.codehilite .no { color: #66d9ef } /* Name.Constant */
+.codehilite .no { color: #89DDFF } /* Name.Constant */
 .codehilite .nd { color: #a6e22e } /* Name.Decorator */
-.codehilite .ni { color: #f8f8f2 } /* Name.Entity */
+.codehilite .ni { color: #A6ACCD } /* Name.Entity */
 .codehilite .ne { color: #a6e22e } /* Name.Exception */
 .codehilite .nf { color: #a6e22e } /* Name.Function */
-.codehilite .nl { color: #f8f8f2 } /* Name.Label */
-.codehilite .nn { color: #f8f8f2 } /* Name.Namespace */
+.codehilite .nl { color: #A6ACCD } /* Name.Label */
+.codehilite .nn { color: #A6ACCD } /* Name.Namespace */
 .codehilite .nx { color: #a6e22e } /* Name.Other */
-.codehilite .py { color: #f8f8f2 } /* Name.Property */
+.codehilite .py { color: #A6ACCD } /* Name.Property */
 .codehilite .nt { color: #f92672 } /* Name.Tag */
-.codehilite .nv { color: #f8f8f2 } /* Name.Variable */
+.codehilite .nv { color: #A6ACCD } /* Name.Variable */
 .codehilite .ow { color: #f92672 } /* Operator.Word */
-.codehilite .w { color: #f8f8f2 } /* Text.Whitespace */
+.codehilite .w { color: #A6ACCD } /* Text.Whitespace */
 .codehilite .mb { color: #ae81ff } /* Literal.Number.Bin */
 .codehilite .mf { color: #ae81ff } /* Literal.Number.Float */
 .codehilite .mh { color: #ae81ff } /* Literal.Number.Hex */
 .codehilite .mi { color: #ae81ff } /* Literal.Number.Integer */
 .codehilite .mo { color: #ae81ff } /* Literal.Number.Oct */
-.codehilite .sa { color: #e6db74 } /* Literal.String.Affix */
-.codehilite .sb { color: #e6db74 } /* Literal.String.Backtick */
-.codehilite .sc { color: #e6db74 } /* Literal.String.Char */
-.codehilite .dl { color: #e6db74 } /* Literal.String.Delimiter */
-.codehilite .sd { color: #e6db74 } /* Literal.String.Doc */
-.codehilite .s2 { color: #e6db74 } /* Literal.String.Double */
+.codehilite .sa { color: #C3E88D } /* Literal.String.Affix */
+.codehilite .sb { color: #C3E88D } /* Literal.String.Backtick */
+.codehilite .sc { color: #C3E88D } /* Literal.String.Char */
+.codehilite .dl { color: #C3E88D } /* Literal.String.Delimiter */
+.codehilite .sd { color: #C3E88D } /* Literal.String.Doc */
+.codehilite .s2 { color: #C3E88D } /* Literal.String.Double */
 .codehilite .se { color: #ae81ff } /* Literal.String.Escape */
-.codehilite .sh { color: #e6db74 } /* Literal.String.Heredoc */
-.codehilite .si { color: #e6db74 } /* Literal.String.Interpol */
-.codehilite .sx { color: #e6db74 } /* Literal.String.Other */
-.codehilite .sr { color: #e6db74 } /* Literal.String.Regex */
-.codehilite .s1 { color: #e6db74 } /* Literal.String.Single */
-.codehilite .ss { color: #e6db74 } /* Literal.String.Symbol */
-.codehilite .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
+.codehilite .sh { color: #C3E88D } /* Literal.String.Heredoc */
+.codehilite .si { color: #C3E88D } /* Literal.String.Interpol */
+.codehilite .sx { color: #C3E88D } /* Literal.String.Other */
+.codehilite .sr { color: #C3E88D } /* Literal.String.Regex */
+.codehilite .s1 { color: #C3E88D } /* Literal.String.Single */
+.codehilite .ss { color: #C3E88D } /* Literal.String.Symbol */
+.codehilite .bp { color: #A6ACCD } /* Name.Builtin.Pseudo */
 .codehilite .fm { color: #a6e22e } /* Name.Function.Magic */
-.codehilite .vc { color: #f8f8f2 } /* Name.Variable.Class */
-.codehilite .vg { color: #f8f8f2 } /* Name.Variable.Global */
-.codehilite .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-.codehilite .vm { color: #f8f8f2 } /* Name.Variable.Magic */
+.codehilite .vc { color: #A6ACCD } /* Name.Variable.Class */
+.codehilite .vg { color: #A6ACCD } /* Name.Variable.Global */
+.codehilite .vi { color: #A6ACCD } /* Name.Variable.Instance */
+.codehilite .vm { color: #A6ACCD } /* Name.Variable.Magic */
 .codehilite .il { color: #ae81ff } /* Literal.Number.Integer.Long */
