时间线倒叙

--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -17,7 +17,7 @@
             <div class="col">
                 <a href="{% url 'blog:timeline'%}" target="_blank" title="查看网站建站历程">
                     <img style="max-width:40px" alt="网站的建站历程" src="{% static 'blog/img/blog.png' %}">
-                    <p class="mt-2">Timeline</p>
+                    <p class="mt-2">更新记录</p>
                 </a>
             </div>
             <div class="col">
