--- a/apps/blog/templates/blog/archive.html
+++ b/apps/blog/templates/blog/archive.html
@@ -35,7 +35,7 @@
                                 <li>{{ each.grouper }} 月 (共 {{ each.list|length }} 篇)
                                     <ul class="pl-4">
                                         {% for item in each.list %}
-                                        <li class="text-info">{{ item.create_date|date:'m-d' }}&nbsp;&nbsp;<a href="{{ item.get_absolute_url }}">{{ item.title }}</a></li>
+                                        <li class="text-info"><a href="{{ item.get_absolute_url }}">{{ item.create_date|date:'m-d' }}&nbsp;&nbsp;{{ item.title }}</a></li>
                                         {% endfor %}
                                     </ul>
                                 </li>
