--- a/apps/tool/templates/tool/query_ip.html
+++ b/apps/tool/templates/tool/query_ip.html
@@ -22,7 +22,7 @@
         <ul>
             <li>工具自动显示访问IP，也就是用户本机IP地址，并显示IP地址详细信息，包括归属地、运营商、地理位置等</li>
             <li>用户也可以手动输入IP地址查询详情</li>
-            <li>IP信息查询结果来自互联网，如有疑问可联系站长</li>
+            <li>IP信息查询结果来自互联网，本站不保证结果准确性</li>
         </ul>
     </div>
     <div class="mb-3">
