--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -122,7 +122,6 @@
             </div>
         </div>
     </div>
-    </div>
     <!--图片预览-->
     <div class="modal fade" id="img-to-big" tabindex="-1" role="dialog" aria-labelledby="img-to-bigTitle"
          aria-hidden="true">
@@ -151,20 +150,23 @@
 
 {% block end_file %}
     <script src="{% static 'blog/js/code.js' %}?v=20230614.4"></script>
+    <script>
+      const links = document.querySelectorAll('#article a');
+      links.forEach(link => {
+        link.setAttribute('target', '_blank');
+      });
+    </script>
     {% if user.is_authenticated %}
         <script src="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.js"></script>
         <script src="{% static 'comment/js/editor.js' %}?v=20230516.1"></script>
         <script src="{% static 'comment/js/activate-power.js' %}?v=20180120"></script>
         <script>
-            var sw = window.screen.width;
+            const sw = window.screen.width;
             if (sw > 1200) {
                 POWERMODE.colorful = true;
                 POWERMODE.shake = false;
                 document.body.addEventListener('input', POWERMODE)
             }
-            ;
-
-
         </script>
     {% endif %}
 {% endblock %}
